# django_hw

./: .env.template  .gitignore  README.md  pyproject.toml  requirements.txt
my_project/catalog/: admin.py  product_detail.html  urls.py  views.py
my_project/catalog/fixtures/: categories.json  products.json
my_project/catalog/management/commands/: populate_products.py
my_project/catalog/migrations/: 0001_initial.py  0002_product_quantity.py
my_project/catalog/models/: Product.py  __init__.py  category.py
my_project/catalog/templates/catalog/: base.html  contacts.html  home.html  menu.html  product_list.html
my_project/config/: settings.py  urls.py
